# japanese-learning

./: .pre-commit-config.yaml  README.md  mise.toml  renovate.json  ruff.toml  uv.toml
.github/workflows/: ci.yaml
anki-extract-kanji/: .coveragerc  README.rst  mise.toml  pyproject.toml
anki-extract-kanji/src/anki_extract_kanji/: __main__.py
anki-extract-kanji/tests/: test_main.py  test_version.py
anki-newlines-to-br/: .coveragerc  LICENSE  README.md  pyproject.toml
anki-newlines-to-br/src/anki_newlines_to_br/: __init__.py  __main__.py  anki.py  helpers.py
anki-newlines-to-br/tests/: conftest.py  test_helpers.py
shirabe-jisho-to-anki/: .gitignore  README.md  mise.toml  pyproject.toml  tox.ini
shirabe-jisho-to-anki/src/shirabe_jisho_to_anki/: __init__.py  __main__.py  anki.py  helpers.py  jmdict.py  jp_helpers.py  shirabe_jisho.py
shirabe-jisho-to-anki/tests/: conftest.py  test_anki.py  test_helpers.py  test_jmdict.py  test_jp_helpers.py  test_shirabe_jisho.py  test_version.py
wanikani-apprentice/: Cargo.toml  Dockerfile  README.md  mise.toml
wanikani-apprentice/.github/workflows/: ci.yaml
wanikani-apprentice/src/: config.rs  main.rs
wanikani-burnt-kanji-to-anki/: README.rst  mise.toml  pyproject.toml  tox.ini
wanikani-burnt-kanji-to-anki/src/wanikani_burnt_kanji_to_anki/: __main__.py  wanikani.py
wanikani-burnt-kanji-to-anki/tests/: conftest.py  mock_wanikani.py  test_wanikani.py
