[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-extract-kanji"
authors = [{name = "Andy Freeland", email = "andy@andyfreeland.net"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dynamic = ["version", "description"]
requires-python = "~=3.14.0"
dependencies = [
    "anki==25.9.2",
    "click~=8.3.0",
]

[dependency-groups]
dev = [
    "coverage~=7.11.0",
    "mypy~=1.18.2",
    "pytest~=9.0.1",
    "pytest-cov~=7.0.0",
    "pytest-randomly~=4.0.1",
]

[project.scripts]
anki-extract-kanji = "anki_extract_kanji.__main__:main"

[project.urls]
Home = "https://github.com/rouge8/anki-extract-kanji"

[tool.hatch.version]
path = "src/anki_extract_kanji/__init__.py"

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]

[tool.mypy]
strict = true
allow_redefinition = true
warn_unreachable = true

[tool.ruff.lint.isort]
known-first-party = ["anki_extract_kanji"]
