[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shirabe_jisho_to_anki"
authors = [{name = "Andy Freeland", email = "andy@andyfreeland.net"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dynamic = ["version", "description"]
requires-python = "~=3.14.0"

dependencies = [
  "anki==25.9.2",
  "attrs==26.1.0",
  "click==8.3.2",
  "lxml==6.0.4",
  "structlog==25.5.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "mypy==1.20.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-randomly==4.0.1",
    "types-lxml==2026.2.16",
]

[project.scripts]
shirabe-jisho-to-anki = "shirabe_jisho_to_anki.__main__:main"

[project.urls]
Home = "https://github.com/rouge8/japanese-learning/tree/main/shirabe-jisho-to-anki"

[tool.hatch.version]
path = "src/shirabe_jisho_to_anki/__init__.py"

[tool.uv]
add-bounds = "exact"

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]

[tool.mypy]
strict = true
allow_redefinition = true
warn_unreachable = true

[tool.ruff]
target-version = "py314"
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "B90",
  "D2",
  "D213",
  "D3",
  "D404",
  "C4",
  "UP",
  "ISC",
  "PGH",
  "RUF",
]
ignore = [
  # 1 blank line required before class docstring
  "D203",
  # Our docstring style allows for a multi-line summary, e.g.:
  #
  #"""
  # Prevent database use without the appropriate fixture/marker, used
  # automatically.
  #
  # Additional content goes here.
  #"""
  "D205",
  # Inverse of D213
  "D212",
  # Explicitly concatenated string should be implicitly concatenated
  "ISC003",
]

[tool.ruff.lint]
allowed-confusables = ["（", "）"]

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
order-by-type = false
known-first-party = ["shirabe_jisho_to_anki"]

[tool.ruff.flake8-implicit-str-concat]
allow-multiline = false
