[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shirabe_jisho_to_anki"
authors = [{name = "Andy Freeland", email = "andy@andyfreeland.net"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dynamic = ["version", "description"]
requires-python = "~=3.14.0"

dependencies = [
  "anki==25.9.2",
  "attrs==26.1.0",
  "click==8.3.2",
  "lxml==6.1.0",
  "structlog==25.5.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "mypy==1.20.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-randomly==4.0.1",
    "pytest-unordered==0.7.0",
    "types-lxml==2026.2.16",
]

[project.scripts]
shirabe-jisho-to-anki = "shirabe_jisho_to_anki.__main__:main"

[project.urls]
Home = "https://github.com/rouge8/japanese-learning/tree/main/shirabe-jisho-to-anki"

[tool.hatch.version]
path = "src/shirabe_jisho_to_anki/__init__.py"

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]

[tool.mypy]
strict = true
allow_redefinition = true
warn_unreachable = true

[tool.ruff.lint.isort]
known-first-party = ["shirabe_jisho_to_anki"]
