[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wanikani_burnt_kanji_to_anki"
authors = [{name = "Andy Freeland", email = "andy@andyfreeland.net"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dynamic = ["version", "description"]
requires-python = "~=3.14.0"

dependencies = [
  "attrs~=25.4.0",
  "click~=8.3.0",
  "httpx~=0.28.1",
  "structlog~=25.5.0",
]

[dependency-groups]
dev = [
    "coverage~=7.11.0",
    "mypy~=1.18.2",
    "pytest~=9.0.1",
    "pytest-cov~=7.0.0",
    "pytest-randomly~=4.0.1",
    "factory-boy~=3.3.3",
    "faker~=37.8.0",
    "pytest-mock~=3.15.1",
    "falcon~=4.2.0",
]

[project.scripts]
wanikani-burnt-kanji-to-anki = "wanikani_burnt_kanji_to_anki.__main__:cli"

[project.urls]
Home = "https://github.com/rouge8/wanikani-burnt-kanji-to-anki"

[tool.hatch.version]
path = "src/wanikani_burnt_kanji_to_anki/__init__.py"

[tool.uv]
add-bounds = "exact"

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]

[tool.mypy]
strict = true
allow_redefinition = true
warn_unreachable = true

[tool.ruff.lint.isort]
known-first-party = ["wanikani_burnt_kanji_to_anki"]
